--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-    <title>Exercício do Pássaro</title>
+    <title>Exercício do Pássaro - Vitor Balbo</title>
     <style>
         body {
             display: flex;
